--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,32 @@
     width: var(--hpSize);
     float: right;
 }
+
+#menu {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+    background-color: #1C1C1C;
+    text-align: center;
+    padding-bottom: 100px;
+    color: white;
+}
+
+.moveBtn {
+    font-size: xx-large;
+    margin-right: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 10px;
+    box-shadow: 0 9px #999;
+}
+
+.moveBtn:hover {
+    color: #d4af37;
+}
+
+.moveBtn:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
