--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,3 +56,8 @@
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
+#gameOver {
+    text-align: center;
+    margin-top: 200px;
+}
